<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/faint_gray">

    <LinearLayout
        android:id="@+id/edit_email_container"
        android:layout_above="@+id/edit_user_name_container"
        style="@style/input_field_style" >

        <CheckBox
            android:id="@+id/check_email"
            style="@style/dot_style"
            />

        <TextView style="@style/border_style"/>

        <EditText
            android:id="@+id/edit_email"
            style="@style/edit_style"
            android:maxLength="70"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:nextFocusDown="@+id/edit_user_name"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_user_name_container"
        style="@style/input_field_style" >
        <CheckBox
            android:id="@+id/check_user_name"
            style="@style/dot_style"
            />

        <TextView style="@style/border_style"/>

        <EditText
            android:id="@+id/edit_user_name"
            style="@style/edit_style"
            android:hint="@string/username"
            android:maxLength="70"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_sign_up_container"
        style="@style/btn_sign_up_style"
        android:layout_below="@+id/edit_user_name_container">

        <CheckBox
            android:id="@+id/check_sign_up"
            style="@style/sign_dots"
            />

        <TextView
            style="@style/border_style"
            android:layout_marginRight="0dp"/>

        <Button
            android:layout_width="215dp"
            android:layout_height="match_parent"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"
            android:clickable="false"
            />

        <TextView style="@style/border_style"
            android:layout_marginRight="0dp"/>

        <CheckBox
            android:id="@+id/check_sign_up_2"
            style="@style/sign_dots"
            />
    </LinearLayout>

</RelativeLayout>